--- a/src/index.css
+++ b/src/index.css
@@ -1,87 +1,54 @@
-.rs-container {
-  box-sizing: border-box;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+.rf-clearfix::after {
+  content: '';
+  clear: both;
+  display: table;
 }
-.rs-container {
+.rf-container {
   font-family: Arial, Helvetica, sans-serif;
   height: 45px;
   position: relative;
 }
-.rs-container .rs-bg,
-.rs-container .rs-selected {
-  background-color: #eee;
-  border: 1px solid #ededed;
-  height: 10px;
+.rf-container .rf-bg,
+.rf-container .rf-selected {
+  background-color: #f4f4f4;
+  height: 2px;
   left: 0;
   position: absolute;
-  top: 5px;
+  top: 10px;
   width: 100%;
-  border-radius: 3px;
 }
-.rs-container .rs-selected {
-  background-color: #00b3bc;
-  border: 1px solid #00969b;
+.rf-container .rf-selected {
+  background-color: #2b72cb;
   transition: all 0.2s linear;
   width: 0;
 }
-.rs-container.disabled .rs-selected {
+.rf-container.disabled .rf-selected {
   background-color: #ccc;
   border-color: #bbb;
 }
-.rs-container .rs-pointer {
-  background-color: #fff;
-  border: 1px solid #bbb;
-  border-radius: 4px;
+.rf-container .rf-pointer {
   cursor: pointer;
-  height: 20px;
+  width: 16px;
+  height: 16px;
   left: -10px;
   position: absolute;
   top: 0;
   transition: all 0.2s linear;
-  width: 30px;
-  box-shadow: inset 0 0 1px #fff, inset 0 1px 6px #ebebeb,
-    1px 1px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 14px;
+  background-color: #2b72cb;
+  border: 3px solid #fff;
 }
-.rs-container.disabled .rs-pointer {
-  border-color: #ccc;
-}
-.rs-container .rs-pointer::before,
-.rs-container .rs-pointer::after {
-  content: '';
-  position: absolute;
-  width: 1px;
-  height: 9px;
-  background-color: #ddd;
-  left: 12px;
-  top: 5px;
-}
-.rs-container .rs-pointer::after {
-  left: auto;
-  right: 12px;
-}
-.rs-container.disabled .rs-pointer {
-  cursor: default;
-}
-.rs-container.sliding .rs-selected,
-.rs-container.sliding .rs-pointer {
-  transition: none;
-}
-.rs-container .rs-scale {
+.rf-container .rf-scale {
   left: 0;
   position: absolute;
   top: 5px;
   white-space: nowrap;
 }
-.rs-container .rs-scale span {
+.rf-container .rf-scale span {
   float: left;
   position: relative;
 }
-.rs-container .rs-scale span::before {
+.rf-container .rf-scale span::before {
   background-color: #ededed;
   content: '';
   height: 8px;
@@ -90,28 +57,28 @@
   top: 10px;
   width: 1px;
 }
-.rs-container.rs-noscale span::before {
+.rf-container.rf-noscale span::before {
   display: none;
 }
-.rs-container.rs-noscale span:first-child::before,
-.rs-container.rs-noscale span:last-child::before {
+.rf-container.rf-noscale span:first-child::before,
+.rf-container.rf-noscale span:last-child::before {
   display: block;
 }
-.rs-container .rs-scale span:last-child {
+.rf-container .rf-scale span:last-child {
   margin-left: -1px;
   width: 0px;
 }
-.rs-container .rs-scale span ins {
+.rf-container .rf-scale span ins {
   color: #333;
   display: inline-block;
   font-size: 12px;
   margin-top: 20px;
   text-decoration: none;
 }
-.rs-container.disabled .rs-scale span ins {
+.rf-container.disabled .rf-scale span ins {
   color: #999;
 }
-.rs-tooltip {
+.rf-tooltip {
   color: #333;
   width: auto;
   min-width: 60px;
@@ -127,7 +94,7 @@
   font-size: 13px;
   padding: 6px 10px 0;
 }
-.rs-container.disabled .rs-tooltip {
+.rf-container.disabled .rf-tooltip {
   border-color: #ccc;
   color: #999;
 }
