Revert "Remove font-family"
This reverts commit 47c62601c817ead97b0f76fa6f5e6d6a8ce8c215.

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   display: table;
 }
 .rf-container {
+  font-family: Arial, Helvetica, sans-serif;
   height: 32px;
   position: relative;
   width: calc(100% - 32px);
